--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <img src="./assets/avatar.png"
         alt="Foto de Rafael Sousa tocando guitarra, usando camisa cinza, barba e fundo laranja" />
       <p>@rafaelsousa.dev</p>
+      <p>"Passionate Software Developer with a knack for crafting elegant solutions to complex problems, dedicated to pushing the
+      boundaries of innovation in the digital realm."</p>
     </div>
 
     <div id="switch" onclick="toggleMode()">
